src/objects/HotelTaxDefine__mdt.object
<CustomObject>
    <fields>
        <fullName>AccountHotelTaxIsShowFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>会計書（33、34のみ）、明細書内に宿泊税と宿泊代が別れて記載する・しないフラグ
注：パラメータ「単価に宿泊税含む」はONのみ有効

TRUE:明細書内に宿泊税と宿泊代が別れて記載する
FALSE：明細書内に宿泊税と宿泊代が明細に含める表示（個別行目に表示しない）</inlineHelpText>
        <label>RFU</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsIncHotelTax__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>商品の単価に宿泊税を含めている、含めてない定義フラグ
TRUE：単価に宿泊税は含める
FALSE:単価に宿泊税は含めない
注：TRUEの場合、ランク金額は設定の際に、宿泊税金額＋ランク金額で設定が必要
例：10000-15000円、宿泊税は100の場合、ランク値最小値は10100に設定、ランク値最大値は150100に設定が必要</inlineHelpText>
        <label>単価に宿泊税含む</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MaxPriceR1__c</fullName>
        <label>ランク1最大値</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxPriceR2__c</fullName>
        <label>ランク2最大値</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxPriceR3__c</fullName>
        <label>ランク3最大値</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinPriceR1__c</fullName>
        <label>ランク1最小値</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinPriceR2__c</fullName>
        <label>ランク2最小値</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MinPriceR3__c</fullName>
        <label>ランク3最小値</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShopCode__c</fullName>
        <inlineHelpText>該当ルールを適応する店舗コードを複数設定可能
例：店舗コード01,02,03は該当ルールを適応の場合、該当項目は「01,02,03」に設定する</inlineHelpText>
        <label>店舗コード</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxPriceR1__c</fullName>
        <label>ランク1宿泊税</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxPriceR2__c</fullName>
        <label>ランク2宿泊税</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TaxPriceR3__c</fullName>
        <label>ランク3宿泊税</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isInvalidFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <label>無効</label>
        <type>Checkbox</type>
    </fields>
    <label>宿泊税</label>
</CustomObject>